# django-admincharts

./: .gitignore  LICENSE  README.md  deps.yml  package.json  pyproject.toml
.github/workflows/: deps.yml  nextrelease.yml  test.yml
admincharts/: admin.py  apps.py  utils.py
admincharts/static/admincharts/: admincharts.css  admincharts.js
admincharts/templates/admin/admincharts/: generic_change_list.html
scripts/: format  install  pre-commit  release  test
tests/: settings.py  tests.py
tests/accounts/: admin.py  models.py
tests/accounts/migrations/: 0001_initial.py
