[tool.poetry]
name = "django-admincharts"
version = "0.1.1"
description = "Chart.js integration for Django admin models"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dropseed/django-admincharts"
documentation = "https://github.com/dropseed/django-admincharts"
repository = "https://github.com/dropseed/django-admincharts"
keywords = ["static", "site", "generator", "jinja"]
packages = [
    { include = "admincharts" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
