[tool.poetry]
name = "django-admincharts"
version = "0.4.1"
description = "Chart.js integration for Django admin models"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dropseed/django-admincharts"
documentation = "https://github.com/dropseed/django-admincharts"
repository = "https://github.com/dropseed/django-admincharts"
keywords = ["Chart.js", "django", "admin", "charts", "graphs"]
packages = [
    { include = "admincharts" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
Django = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
